clean dirty code

--- a/pos-creator/build.gradle
+++ b/pos-creator/build.gradle
@@ -1,8 +1,6 @@
-import io.github.fvarrui.javapackager.gradle.PackageTask
-
 plugins {
     id 'application'
-    id 'io.github.fvarrui.javapackager.plugin' version '1.7.6'
+    id 'org.beryx.jlink' version '3.1.1'
 }
 
 group 'homer.tastyworld.frontend'
@@ -18,31 +16,33 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
-dependencies {}
+dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.36'
+    annotationProcessor 'org.projectlombok:lombok:1.18.36'
+}
 
-task packageToApp(type: PackageTask, dependsOn: build) {
-    mainClass = application.mainClass
+jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
-    outputDirectory = file(uri("$rootDir/packaged-apps/pos-creator"))
-    setAppName("TastyWorld-POS-Creator")
-    displayName = "TastyWorld-POS-Creator"
-    organizationName = "Homer"
-    jreMinVersion = targetCompatibility
-    additionalModulePaths = [file("$System.env.PATH_TO_FX_MODS")]
-//    administratorRequired = true
-//    fileAssociations =
-//    additionalResources = [ file('file path'), file('folder path'), ... ]
-//    platform = "auto"|"linux"|"mac"|"windows"  // Default is "auto"
-
-//    linuxConfig {
-//        ...
-//    }
-    macConfig {
-        icnsFile = file(uri("src/main/resources/homer/database/gui/AppIcon/HomerDataBaseIcon.icns"))
+    manifest {
+        attributes(
+                'Main-Class': application.mainClass,
+                "Class-Path": '.'
+        )
     }
-    winConfig {
-        icoFile = file(uri("src/main/resources/homer/database/gui/AppIcon/HomerDataBaseIcon.ico"))
-        disableRunAfterInstall = false
-        removeOldLibs = true
+}
+
+jlink {
+    mergedModule {
+        requires "java.xml"
     }
+    imageZip = project.file("${buildDir}/distributions/TastyWorld-v${version}-${javafx.platform.classifier}.zip")
+    options = ['--strip-debug', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'TastyWorld-POS-Creator'
+    }
+}
+
+jlinkZip {
+    group = 'distribution'
 }
