--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'java'
-    id 'org.openjfx.javafxplugin' version '0.0.13' apply false
+    id 'org.openjfx.javafxplugin' version '0.0.13'
+    id 'org.beryx.jlink' version '3.1.1' apply false
 }
 
 allprojects {
@@ -26,13 +26,16 @@ subprojects {
         implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
         implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
         implementation 'org.slf4j:slf4j-api:1.7.36'
-        implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.2'
-        implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
+        implementation 'org.slf4j:slf4j-jdk14:1.7.36'
         implementation 'com.rabbitmq:amqp-client:5.16.0'
     }
     if (project.name != 'starter-pack') {
+        apply plugin: 'application'
+        apply plugin: 'org.beryx.jlink'
+
         dependencies {
             implementation 'homer.tastyworld.frontend:starter-pack:0.0.1-SNAPSHOT'
+            runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:$javafx.platform.classifier"
         }
     }
 
@@ -43,19 +46,9 @@ subprojects {
 
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
+        sourceCompatibility = '9'
+        targetCompatibility = '9'
 //        options.compilerArgs += ['--module-path', classpath.asPath]
-    }
-}
-
-task createLocalRepoDir {
-    doLast {
-        new File(rootDir, "local-repo").mkdirs()
-    }
-}
-
-task createPackagedAppsDir {
-    doLast {
-        new File(rootDir, "packaged-apps").mkdirs()
     }
 }
 
