--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ subprojects {
         apply plugin: 'org.beryx.jlink'
 
         dependencies {
-            implementation 'homer.tastyworld.frontend:starter-pack:0.0.1-SNAPSHOT'
+            implementation 'homer.tastyworld.frontend:starter-pack:1.0.0'
             runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:$javafx.platform.classifier"
         }
     }
