--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,8 @@ allprojects {
         }
     }
 
-    sourceCompatibility = '9'
-    targetCompatibility = '9'
+    sourceCompatibility = '21'
+    targetCompatibility = '21'
 }
 
 subprojects {
@@ -29,6 +29,8 @@ subprojects {
         implementation 'org.slf4j:slf4j-jdk14:1.7.36'
         implementation 'com.rabbitmq:amqp-client:5.16.0'
         implementation 'com.fazecast:jSerialComm:2.10.4'
+        compileOnly 'org.projectlombok:lombok:1.18.36'
+        annotationProcessor 'org.projectlombok:lombok:1.18.36'
     }
     if (project.name != 'starter-pack') {
         apply plugin: 'application'
@@ -41,14 +43,14 @@ subprojects {
     }
 
     plugins.withType(JavaPlugin) {
-        sourceCompatibility = '9'
-        targetCompatibility = '9'
+        sourceCompatibility = '21'
+        targetCompatibility = '21'
     }
 
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
-        sourceCompatibility = '9'
-        targetCompatibility = '9'
+        sourceCompatibility = '21'
+        targetCompatibility = '21'
 //        options.compilerArgs += ['--module-path', classpath.asPath]
     }
 }
