--- a/pos-creator/src/main/resources/twapp.properties
+++ b/pos-creator/src/main/resources/twapp.properties
@@ -1,2 +1,4 @@
-app.name = POS-Creator
+app.identifier_name = POS-Creator
 app.version = 1.0.0
+app.tittle = TastyWorld-POS-Creator
+#app.cache.available = false
