follow sp updates in pos-processor

--- a/pos-processor/src/main/resources/twapp.properties
+++ b/pos-processor/src/main/resources/twapp.properties
@@ -1,2 +1,4 @@
-app.name = POS-Processor
+app.identifier_name = POS-Processor
 app.version = 1.0.0
+app.tittle = TastyWorld-POS-Processor
+#app.cache.available = false
