follow sp updates in status-display

--- a/status-display/src/main/resources/twapp.properties
+++ b/status-display/src/main/resources/twapp.properties
@@ -1,2 +1,4 @@
-app.name = StatusDisplay
+app.identifier_name = StatusDisplay
 app.version = 1.0.0
+app.tittle = TastyWorld-StatusDisplay
+#app.cache.available = false
