follow updates in status-display

--- a/status-display/src/main/resources/twapp.properties
+++ b/status-display/src/main/resources/twapp.properties
@@ -1,4 +1,3 @@
-app.identifier_name = StatusDisplay
+app.identifier.name = StatusDisplay
 app.version = 1.0.0
 app.tittle = TastyWorld-StatusDisplay
-#app.cache.available = false
