major pos-processor upgrade

--- a/pos-processor/src/main/resources/twapp.properties
+++ b/pos-processor/src/main/resources/twapp.properties
@@ -1,4 +1,3 @@
-app.identifier_name = POS-Processor
+app.identifier.name = POS-Processor
 app.version = 1.0.0
 app.tittle = TastyWorld-POS-Processor
-#app.cache.available = false
