major pos-creator upgrade

--- a/pos-creator/src/main/resources/twapp.properties
+++ b/pos-creator/src/main/resources/twapp.properties
@@ -1,4 +1,3 @@
-app.identifier_name = POS-Creator
+app.identifier.name = POS-Creator
 app.version = 1.0.0
 app.tittle = TastyWorld-POS-Creator
-#app.cache.available = false
